--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='mightbread'>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular-route.js"></script>
     <title>Mighty Bread</title>
   </head>
   <body>
-    
+
 
   </body>
 </html>
