--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='mightbread'>
+<html ng-app='mightybread'>
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
@@ -10,5 +10,15 @@
   <body>
 
 
+    <script src="js/app.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/controllers/home.controller.js"></script>
+    <script src="js/controllers/aboutus.controller.js"></script>
+    <script src="js/controllers/events.controller.js"></script>
+    <script src="js/controllers/programs.controller.js"></script>
+    <script src="js/controllers/fooddrives.controller.js"></script>
+    <script src="js/controllers/contactus.controller.js"></script>
+    <script src="js/controllers/wishlist.controller.js"></script>
+    <script src="js/controllers/navbar.controller.js"></script>
   </body>
 </html>
